# edikt

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  install.sh
test/integration/: benchmark-subset.sh  conftest.py  diff-only-rendering.sh  doctor-sidecar.sh  doctor-verify-check.sh  extractor-smoke.sh  helpers.py  init-creates-sidecars.sh  migrate-fenced.sh  migrate-mixed.sh  migrate-partial-v05x.sh  migrate-v043.sh  migrate-v05x.sh  per-artifact-compile.sh  plan-command-gates-on-verify.sh  plan-tier2-absent.sh  pyproject.toml  pytest.ini  review-cross-check.sh  test_adr_new_interview.py  test_adr_review_backfill.py  test_adr_review_soft_language_markers.py  test_attack_templates.py  test_compile_orphan_detection.py  test_compile_schema_completeness.py  test_doctor_source_check.py  test_e2e_artifacts_from_spec.py  test_e2e_governance_chain.py  test_e2e_plan_with_sidecar.py  test_e2e_sdlc_chain.py  test_e2e_sidecar_only_command.py  test_e2e_v060_release.py  test_evaluator_blocked_verdict.py  test_init_greenfield.py  test_plan_phase_execution.py  test_plan_preflight_e2e.py  test_post_compact_recovery.py  test_shared_directive_checks.py  test_shared_directive_checks_drift.py  test_spec_007_doctor_health.py  (+12 more)
test/integration/benchmarks/: METHODOLOGY.md  README.md  conftest.py  cross_model.py  phrasing.py  report.py  runner.py  stats.py  test_compliance.py
test/integration/governance/: test_adr_sentinel_integrity.py  test_benchmark_advisory_exit.py  test_benchmark_report_schema.py  (+10 more)
tools/gov-benchmark/: pyproject.toml
(+1292 files in other folders)
